--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 #site-container {
     display: grid;
     grid-template: 120px 1fr / 1fr 4fr;
@@ -5,6 +10,17 @@
 
 #sidebar {
     grid-row: 1 / 3;
+    display: grid;
+    align-items: center;
+    grid-auto-rows: min-content;
+    gap: 40px;
+}
+
+#sidebar a {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    align-items: center;
+    text-align: left;
 }
 
 #header {
@@ -50,10 +66,8 @@
 .card ul {
     display: grid;
     grid-auto-flow: column;
-}
-
-li {
-    list-style-type: none;
+    align-items: center;
+    justify-content: end;
 }
 
 .grid-left {
@@ -62,4 +76,12 @@ li {
 
 .grid-right {
     justify-self: end;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
