--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,32 @@
+@font-face {
+    font-family: Roboto;
+    src: url("fonts/Roboto-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url("fonts/Roboto-Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url("fonts/Roboto-Light.ttf") format("truetype");
+    font-weight: light;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
+html {
+    font-family: Roboto, sans-serif;
+}
+
 #site-container {
     display: grid;
-    grid-template: 120px 1fr / 1fr 4fr;
+    grid-template: 120px calc(100vh - 120px) / 1fr 4fr;
 }
 
 #sidebar {
@@ -13,7 +34,15 @@
     display: grid;
     align-items: center;
     grid-auto-rows: min-content;
-    gap: 40px;
+    background-color: rgb(25, 146, 212);
+    gap: 30px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+
+#sidebar ul {
+    display: grid;
 }
 
 #sidebar a {
@@ -21,6 +50,23 @@
     grid-template-columns: 40px 1fr;
     align-items: center;
     text-align: left;
+    padding: 10px 20px;
+    gap: 10px;
+}
+
+#sidebar img{
+    filter: invert(1);
+    width: 24px;
+    justify-self: center;
+}
+
+#dashboard {
+    font-size: 1.6rem;
+    padding-top: 10px;
+}
+
+#dashboard img{
+    width: 40px;
 }
 
 #header {
@@ -39,6 +85,12 @@
     grid-auto-flow: column;
 }
 
+.bell-btn {
+    width: 24px;
+    border: none;
+    background-color: inherit;
+}
+
 #welcome-msg {
     display: grid;
     grid-template: 1fr 1fr / auto auto;
@@ -47,6 +99,15 @@
 
 #welcome-msg .profile-pic {
     grid-row: 1 / 3;
+}
+
+div.avatar {
+    width: 48px;
+}
+
+img.avatar {
+    width: 48px;
+    border-radius: 50%;
 }
 
 #main-content {
@@ -84,4 +145,8 @@ li {
 
 a {
     text-decoration: none;
+}
+
+a:visited {
+    color: inherit;
 }
