--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 
 #site-container {
     display: grid;
-    grid-template: 120px calc(100vh - 120px) / 1fr 4fr;
+    grid-template: auto 1fr / 1fr 4fr;
 }
 
 #sidebar {
@@ -34,7 +34,7 @@ html {
     display: grid;
     align-items: center;
     grid-auto-rows: min-content;
-    background-color: rgb(25, 146, 212);
+    background-color: #1992d4;
     gap: 30px;
     color: white;
     font-weight: bold;
@@ -71,18 +71,41 @@ html {
 
 #header {
     display: grid;
-    grid-template: auto auto / 2fr 1fr;
+    grid-template: auto auto / 3fr 2fr;
     align-items: center;
+    padding: 10px 60px 20px 40px;
+    box-shadow: 0 5px 5px lightgrey;
+    font-weight: bold;
+    gap: 30px;
+    font-size: 1.2rem;
 }
 
-#header input[type="search"] {
-    height: 1.6rem;
+#search-container {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    justify-items: start;
+    align-items: center;
+    gap: 20px;
+}
+
+#search-container input[type="search"] {
+    height: 1.8rem;
     width: 100%;
+    border: none;
+    border-radius: 16px;
+    background-color: #e2e8f0;
+    padding: 0 10px;
+}
+
+#search-container + ul {
+    padding-right: 10px;
 }
 
 #header ul {
     display: grid;
+    align-items: center;
     grid-auto-flow: column;
+    gap: 30px;
 }
 
 .bell-btn {
@@ -93,21 +116,33 @@ html {
 
 #welcome-msg {
     display: grid;
-    grid-template: 1fr 1fr / auto auto;
+    grid-template: auto auto / auto auto;
     align-items: center;
+    gap: 5px 20px;
 }
 
-#welcome-msg .profile-pic {
+#welcome-msg div.grid-bottom {
+    font-size: 0.8rem;
+}
+
+#welcome-msg div.grid-top {
+    font-size: 1.5rem;
+}
+
+#welcome-msg .avatar {
     grid-row: 1 / 3;
 }
 
-div.avatar {
-    width: 48px;
-}
-
-img.avatar {
-    width: 48px;
-    border-radius: 50%;
+#header button {
+    border: none;
+    border-radius: 24px;
+    background-color: #1992d4;
+    font-family: Roboto, sans-serif;
+    font-weight: bold;
+    font-size: 1rem;
+    color: white;
+    padding: 10px 20px;
+    width: 100px;
 }
 
 #main-content {
@@ -137,6 +172,27 @@ img.avatar {
 
 .grid-right {
     justify-self: end;
+}
+
+.grid-bottom {
+    align-self: self-end;
+}
+
+.grid-top {
+    align-self: self-start
+}
+
+img {
+    width: 24px;
+}
+
+img.avatar {
+    width: 48px;
+    border-radius: 50%;
+}
+
+img.big-avatar {
+    width: 72px;
 }
 
 li {
