--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,13 @@ html {
     font-weight: bold;
 }
 
+body {
+    height: 100vh;
+}
+
 #site-container {
     display: grid;
-    grid-template: auto 1fr / 1fr 4fr;
+    grid-template: 180px 1fr / 1fr 4fr;
 }
 
 #sidebar {
@@ -71,7 +75,7 @@ html {
 
 #header {
     display: grid;
-    grid-template: auto auto / 3fr 2fr;
+    grid-template: 1fr 2fr / 3fr 2fr;
     align-items: center;
     padding: 10px 60px 20px 40px;
     box-shadow: 0 5px 5px lightgrey;
@@ -98,7 +102,7 @@ html {
 }
 
 #search-container + ul {
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 #header ul {
@@ -116,7 +120,7 @@ html {
 
 #welcome-msg {
     display: grid;
-    grid-template: auto auto / auto auto;
+    grid-template: 1fr 1fr / auto 1fr;
     align-items: center;
     gap: 5px 20px;
 }
@@ -147,13 +151,15 @@ html {
 
 #main-content {
     display: grid;
-    grid-template: 1fr 1fr / 1fr 200px;
+    grid-template: 1fr 1fr / 1fr 300px;
     background-color: #e2e8f0;
     padding: 40px 20px;
+    gap: 24px
 }
 
 #main-content > div {
     display: grid;
+    grid-template-rows: auto 1fr;
     gap: 12px;
 }
 
@@ -167,9 +173,8 @@ html {
 
 #card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 24px;
-    padding-right: 20px;
 }
 
 .card {
@@ -180,6 +185,8 @@ html {
     background-color: white;
     padding: 40px 20px;
     gap: 10px;
+    box-shadow: 0 5px 5px lightgrey;
+    height: 200px;
 }
 
 .card-title {
@@ -200,6 +207,62 @@ html {
     align-self: end;
     justify-content: end;
     gap: 24px;
+}
+
+#announcement-container,
+#trending-container {
+    display: grid;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 5px 5px lightgrey;
+    font-size: 0.9rem;
+}
+
+#announcement-container {
+    font-size: 0.9rem;
+    padding: 40px;
+}
+
+.announcement {
+    display: grid;
+    gap: 2px;
+    padding: 20px 0;
+    border-bottom: 1px solid lightgrey;
+}
+
+.announcement:first-child {
+    padding-top: 0;
+}
+
+.announcement:last-child {
+    padding-bottom: 0;
+    border-bottom: none;
+}
+
+.announcement-content {
+    font-size: 0.8rem;
+    font-weight: normal;
+    color: #5e5d5d;
+}
+
+#trending-container {
+    padding: 20px;
+    align-items: center;
+}
+
+.trending-item {
+    display: grid;
+    grid-template: 1fr 1fr / auto 1fr;
+    grid-gap: 0 10px;
+}
+
+.trending-item img {
+    grid-row: 1 / 3;
+}
+
+.trending-project {
+    font-weight: normal;
+    color: #5e5d5d;
 }
 
 .grid-left {
